feat: improve dep list logic, add missing-dep warnings, fix resource leaks, optimize micro-level
Agent-Logs-Url: https://github.com/blue-wind-25/JxMake/sessions/e86301dd-812c-4011-8b15-b2ec1d55795d

Co-authored-by: blue-wind-25 <71955351+blue-wind-25@users.noreply.github.com>